optimised links to css and image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>FreeCodeCamp Tributes Page</title>
     <link rel="stylesheet" href="./styles/style.css" type="text/css">
     <link rel="stylesheet" href="./styles/large_screens.css" type="text/css">
+<link rel="stylesheet" href="style.css" type="text/css"><!--optimised link for github commit-->
     <script src="https://kit.fontawesome.com/6798495f24.js" crossorigin="anonymous"></script>
 </head>
 <style>
@@ -16,7 +17,8 @@
         <h1 id="title">Tributes Page</h1>
         <h6 id="fcc">FreeCodeCamp  16/Jun/2020</h6>
         <div id="image-div">
-            <img src="./images/SheepBoy.jpg" id="image" alt="an image" width="100%" height="100%">
+            <!--<img src="./images/SheepBoy.jpg" id="image" alt="an image" width="100%" height="100%">-->
+<img src="SheepBoy.jpg" id="image" alt="an image" width="100%" height="100%"><!--optimised link for github upload from mobile-->
             <p id="image-caption">
                 Sheep and Boy
             </p>
