--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 </style>
 <body>
     <div id="main">
-        <h1 id="title">Tributes Page</h1>
+        <h1 id="title">Inbar cohen</h1>
+        <h5 id="title-description">The boy who saved a million sheep</h5>
         <h6 id="fcc">FreeCodeCamp  16/Jun/2020</h6>
         <div id="image-div">
-            <!--<img src="./images/SheepBoy.jpg" id="image" alt="an image" width="100%" height="100%">-->
+            <img src="./images/SheepBoy.jpg" id="image" alt="an image" width="100%" height="100%">
 <img src="SheepBoy.jpg" id="image" alt="an image" width="100%" height="100%"><!--optimised link for github upload from mobile-->
             <p id="image-caption">
-                Sheep and Boy
+                Inbar and his sheep friends- Shabtai and Shavith
             </p>
         </div>
         <div id="tribute-info">
@@ -31,7 +32,7 @@
                 Etiam in enim vel tortor consequat aliquet. Aenean vel neque at ligula molestie condimentum. Mauris nec lobortis nulla, non suscipit quam. Fusce sed placerat lorem. Donec ac orci ac enim aliquet ullamcorper. Cras aliquet rutrum libero at lobortis. Duis elementum, eros ut pulvinar porttitor, sem risus accumsan velit, vel pulvinar erat elit vitae nunc. Quisque dapibus felis et justo vulputate scelerisque. Quisque lobortis euismod ornare.
             </p>
         </div>
-        <a href="xyz.com" id="tribute-link" target="_blank">further reading<i class="fas fa-link"></i></a>
+        <a href="#" id="tribute-link" target="_blank">further reading<i class="fas fa-link"></i></a>
     </div>
     <div author>okafor-udah divine | 2020 <sup>&copy;</sup></div>
 </body>
